[gd_scene load_steps=28 format=2]

[ext_resource path="res://Различные корни хрена/8689af0304a57abada2e2afc88475f95.jpg" type="Texture" id=1]
[ext_resource path="res://Player3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Различные корни хрена/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://PLAAA.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level_3.gd" type="Script" id=5]
[ext_resource path="res://Squid_boss/Attack/Straight-Shot-Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Stoled/Scripts/Straight-Shot-Enemy!!!!!.gd" type="Script" id=7]
[ext_resource path="res://Stoled/Scripts/Straight-Shot-Enemy2.gd" type="Script" id=8]
[ext_resource path="res://pngegg.png" type="Texture" id=9]
[ext_resource path="res://Stoled/Scripts/Player.gd" type="Script" id=10]
[ext_resource path="res://lever_NODE.gd" type="Script" id=11]
[ext_resource path="res://Рычаг/Lever.tscn" type="PackedScene" id=12]
[ext_resource path="res://teleport/Teleport_Level1_BACK.tscn" type="PackedScene" id=13]
[ext_resource path="res://teleport/Teleport_Level3_again_back.gd" type="Script" id=14]
[ext_resource path="res://Boss/BOSS.tscn" type="PackedScene" id=15]
[ext_resource path="res://Stoled/Scenes/Enemies/Straight-Shot-Enemy!!!!!!!1.tscn" type="PackedScene" id=16]
[ext_resource path="res://Stoled/Scripts/Straight-Shot-Enemy_______.gd" type="Script" id=17]
[ext_resource path="res://Stoled/Scripts/Straight-Shot-Enemy_______1.gd" type="Script" id=18]
[ext_resource path="res://Stoled/Scripts/Straight-Shot-Enemy_______2.gd" type="Script" id=19]
[ext_resource path="res://Stoled/Scripts/Straight-Shot-Enemy_reverse.gd" type="Script" id=20]
[ext_resource path="res://Рычаг/Lever_LEVER.gd" type="Script" id=21]
[ext_resource path="res://LEVER.gd" type="Script" id=22]
[ext_resource path="res://DIALOg.gd" type="Script" id=23]
[ext_resource path="res://hp_bar/hp_bar_full.png" type="Texture" id=24]
[ext_resource path="res://hp_bar/hp_bar_empty.png" type="Texture" id=26]
[ext_resource path="res://hp_bar/hp_bar_half.png" type="Texture" id=27]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 314.552 )

[node name="Level_3" type="Node2D"]
position = Vector2( -3, 0 )
script = ExtResource( 5 )

[node name="8689af0304a57abada2e2afc88475f95" type="Sprite" parent="."]
position = Vector2( 442.405, 343.989 )
scale = Vector2( 1.2364, 1.68199 )
texture = ExtResource( 1 )

[node name="Boss" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 391.527, 320.154 )
scale = Vector2( 0.5, 0.5 )

[node name="StaticBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 48.1517, 714.778 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 3 )]
position = Vector2( 213.845, 714.84 )

[node name="StaticBody2D3" parent="." instance=ExtResource( 3 )]
position = Vector2( 379.374, 714.879 )

[node name="StaticBody2D4" parent="." instance=ExtResource( 3 )]
position = Vector2( 544.974, 714.911 )

[node name="StaticBody2D5" parent="." instance=ExtResource( 3 )]
position = Vector2( 710.387, 714.875 )

[node name="StaticBody2D6" parent="." instance=ExtResource( 3 )]
position = Vector2( 875.974, 714.901 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( -1767.44, -792.57 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( -8.12939, -797.268 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 178.037, 522.404 )
scale = Vector2( 0.3, 0.225 )

[node name="KinematicBody2D1" parent="." instance=ExtResource( 4 )]
position = Vector2( 683.096, 524.404 )
scale = Vector2( 0.3, 0.225 )

[node name="KinematicBody2D2" parent="." instance=ExtResource( 4 )]
position = Vector2( 133.86, 410 )
scale = Vector2( 0.3, 0.225 )

[node name="KinematicBody2D3" parent="." instance=ExtResource( 4 )]
position = Vector2( 740.64, 409.056 )
scale = Vector2( 0.3, 0.225 )

[node name="KinematicBody2D4" parent="." instance=ExtResource( 4 )]
position = Vector2( 171.152, 289 )
scale = Vector2( 0.3, 0.225 )

[node name="KinematicBody2D5" parent="." instance=ExtResource( 4 )]
position = Vector2( 446.041, 191 )
scale = Vector2( 0.3, 0.225 )

[node name="KinematicBody2D6" parent="." instance=ExtResource( 4 )]
position = Vector2( 708.638, 290.26 )
scale = Vector2( 0.3, 0.225 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="PLAYER" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Player2" parent="PLAYER" instance=ExtResource( 2 )]
position = Vector2( 53.2458, 608.069 )
collision_mask = 0

[node name="lever" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Straight-Shot-Enemy" parent="lever" instance=ExtResource( 6 )]
visible = false
position = Vector2( 989.461, 618.791 )
scale = Vector2( 4.5, 4.5 )

[node name="Straight-Shot-Enemy3" parent="lever" instance=ExtResource( 6 )]
visible = false
position = Vector2( 1338.9, 589.333 )
scale = Vector2( 4.5, 4.5 )
script = ExtResource( 8 )

[node name="Straight-Shot-Enemy2" parent="lever" instance=ExtResource( 6 )]
visible = false
position = Vector2( 989.461, 564.757 )
scale = Vector2( 4.5, 4.5 )

[node name="Teleport" parent="lever" instance=ExtResource( 13 )]
position = Vector2( 45.9022, 599.975 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 14 )

[node name="Area2D" parent="lever" instance=ExtResource( 12 )]
position = Vector2( 205.529, 605.853 )

[node name="Change_phase" type="Timer" parent="."]
one_shot = true

[node name="Attack_1" type="Node2D" parent="."]

[node name="Straight-Shot-Enemy" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 49.1969, -37.755 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy2" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 84.5112, -37.755 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy3" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 120.552, -37.755 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy4" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 155.467, -37.425 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy5" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 191.575, -37.5045 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy6" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 227.354, -37.2038 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy7" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 253.01, -37.1863 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy8" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 287.898, -37.8856 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy9" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 12.8161, -37.8183 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy10" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 636.057, -29.7187 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy11" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 671.371, -29.7187 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy12" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 707.411, -29.7187 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy13" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 742.326, -29.3887 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy14" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 778.434, -29.4682 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy15" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 814.213, -29.1675 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy16" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 839.87, -29.15 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy17" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 874.758, -29.8493 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy18" parent="Attack_1" instance=ExtResource( 6 )]
visible = false
position = Vector2( 599.676, -29.782 )
script = ExtResource( 7 )

[node name="Attack_1_end" type="Timer" parent="Attack_1"]
wait_time = 5.0
one_shot = true

[node name="Attack_1" type="Timer" parent="Attack_1"]
wait_time = 5.0
one_shot = true

[node name="Attack2" type="Node2D" parent="."]

[node name="Straight-Shot-Enemy2" parent="Attack2" instance=ExtResource( 16 )]
visible = false
position = Vector2( 367.212, 250.997 )
script = ExtResource( 18 )

[node name="Straight-Shot-Enemy3" parent="Attack2" instance=ExtResource( 16 )]
visible = false
position = Vector2( 451.117, 234.516 )
script = ExtResource( 19 )

[node name="Straight-Shot-Enemy" parent="Attack2" instance=ExtResource( 16 )]
visible = false
position = Vector2( 530.528, 252.495 )
script = ExtResource( 17 )

[node name="Attack2" type="Timer" parent="Attack2"]
wait_time = 5.0
one_shot = true

[node name="Attack3" type="Node2D" parent="."]

[node name="Straight-Shot-Enemy" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( 1058.19, 490.33 )

[node name="Straight-Shot-Enemy2" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( 1055.97, 378.182 )

[node name="Straight-Shot-Enemy3" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( 1060.86, 257.112 )

[node name="Straight-Shot-Enemy7" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( 1062.86, 160.112 )

[node name="Straight-Shot-Enemy4" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( -102.771, 490 )
script = ExtResource( 20 )

[node name="Straight-Shot-Enemy5" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( -105, 380.069 )
script = ExtResource( 20 )

[node name="Straight-Shot-Enemy6" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( -100.101, 259 )
script = ExtResource( 20 )

[node name="Straight-Shot-Enemy8" parent="Attack3" instance=ExtResource( 6 )]
visible = false
position = Vector2( -98.1013, 167 )
script = ExtResource( 20 )

[node name="Attack3" type="Timer" parent="Attack3"]
wait_time = 5.0
one_shot = true

[node name="Attack3_phase2" type="Timer" parent="Attack3"]
wait_time = 5.0
one_shot = true

[node name="Attack4" type="Node2D" parent="."]

[node name="Straight-Shot-Enemy19" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 133.612, -36.4951 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy20" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 168.926, -36.4951 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy21" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 204.967, -36.4951 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy22" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 239.882, -36.1651 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy23" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 275.99, -36.2446 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy24" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 311.769, -35.9439 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy25" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 337.425, -35.9264 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy26" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 372.313, -36.6257 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy27" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 97.2308, -36.5584 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy39" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 74.2816, -36.4951 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy40" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 37.9008, -36.5584 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy28" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 445.809, -37.2782 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy29" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 481.123, -37.2782 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy30" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 517.163, -37.2782 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy31" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 552.078, -36.9482 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy32" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 588.186, -37.0277 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy33" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 623.965, -36.727 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy34" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 648.362, -36.7095 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy35" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 683.25, -37.4088 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy37" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 718.081, -36.7095 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy38" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 752.969, -37.4088 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy41" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 787.077, -39.5278 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy42" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 821.908, -38.8285 )
script = ExtResource( 7 )

[node name="Straight-Shot-Enemy36" parent="Attack4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 408.168, -37.3415 )
script = ExtResource( 7 )

[node name="Attack4" type="Timer" parent="Attack4"]
wait_time = 5.0
one_shot = true

[node name="Attack4_end" type="Timer" parent="Attack4"]
wait_time = 5.0
one_shot = true

[node name="LEVER" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="LEVER1" parent="LEVER" instance=ExtResource( 12 )]
visible = false
position = Vector2( 30.4276, 377.358 )
script = ExtResource( 21 )

[node name="LEVER2" parent="LEVER" instance=ExtResource( 12 )]
visible = false
position = Vector2( 443.082, 157.355 )
script = ExtResource( 21 )

[node name="LEVER3" parent="LEVER" instance=ExtResource( 12 )]
visible = false
position = Vector2( 834.331, 376.169 )
script = ExtResource( 21 )

[node name="LEVER4" parent="LEVER" instance=ExtResource( 12 )]
visible = false
position = Vector2( 465.775, 604.334 )
script = ExtResource( 21 )

[node name="CD" type="Timer" parent="LEVER"]
wait_time = 0.5
one_shot = true

[node name="DIALOg" type="Node2D" parent="."]
script = ExtResource( 23 )

[node name="DEATH" type="Sprite" parent="."]
visible = false
position = Vector2( 445.947, 360.917 )
texture = ExtResource( 9 )

[node name="hp_bar_empty" type="Sprite" parent="."]
visible = false
position = Vector2( 153.508, 63.0007 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 26 )

[node name="hp_bar_full" type="Sprite" parent="."]
visible = false
position = Vector2( 153.508, 63.0007 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 24 )

[node name="hp_bar_half" type="Sprite" parent="."]
visible = false
position = Vector2( 153.508, 63.0007 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 27 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Change_phase" to="." method="_on_Change_phase_timeout"]
[connection signal="timeout" from="Attack_1/Attack_1_end" to="." method="_on_Attack_1_end_timeout"]
[connection signal="timeout" from="Attack_1/Attack_1" to="." method="_on_Attack_1_timeout"]
[connection signal="timeout" from="Attack2/Attack2" to="." method="_on_Attack2_timeout"]
[connection signal="timeout" from="Attack3/Attack3" to="." method="_on_Attack3_timeout"]
[connection signal="timeout" from="Attack3/Attack3_phase2" to="." method="_on_Attack3_phase2_timeout"]
[connection signal="timeout" from="Attack4/Attack4" to="." method="_on_Attack4_timeout"]
[connection signal="timeout" from="Attack4/Attack4_end" to="." method="_on_Attack4_end_timeout"]
[connection signal="timeout" from="LEVER/CD" to="." method="_on_CD_timeout"]
